[DCAEGEN2] Update Administrative status for measurement group
Issue-ID: DCAEGEN2-2820
